--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
 
         .circle:hover {
-            box-shadow: 0 0 2px #91bd09;
+            box-shadow: 0 0 2px #8f0518;
             -webkit-box-shadow: 0 0 2px #8f0518;
             -moz-box-shadow: 0 0 2px #8f0518;
         }
